--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 
 <meta charset="utf8">
 <link href='http://fonts.googleapis.com/css?family=Cantarell:regular,bold' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/css/stickytheme.css">
 <title>DZSlides</title>
-
-<header>
-    <a href="http://twitter.com/paulrouget" class="twitter-follow-button" data-button="grey" data-width="300px" data-text-color="#FAE50B" data-link-color="#FF0066">Follow @paulrouget</a><script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
-</header>
 
 <article>
     <h1>DZSlides</h1>
@@ -31,31 +26,17 @@
     <h2>Demos</h2>
 
     <h3>Screencast</h3>
-    <iframe class="frame" width="560" height="349" style="margin-left: -280px" src="http://www.youtube.com/embed/YEbwGoL-fTI" frameborder="0" allowfullscreen></iframe>
+    <iframe class="frame" width="560" height="349" src="http://www.youtube.com/embed/YEbwGoL-fTI" frameborder="0" allowfullscreen></iframe>
 
     <h3>Why you should fear the Ninja Turtles.</h3>
 
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#tmnt/slides.html">
+    <iframe class="frame" width="700" height="600" src="/slides/embedder.html#tmnt/slides.html">
       <a href="/slides/tmnt/slides.html">link to the presentation</a>
     </iframe>
 
     <h3>HTML5 in the wild</h3>
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#html5inthewild/slides.html">
+    <iframe class="frame" width="700" height="600" src="/slides/embedder.html#html5inthewild/slides.html">
       <a href="/slides/html5inthewild/slides.html">link to the presentation</a>
     </iframe>
 
 </article>
-
-<a href="http://github.com/paulrouget/dzslides"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
-
-<!-- Analytics -->
-<script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-22781000-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
- </script>
